--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.40.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,6 +22,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4",
     "razorpay": "^2.8.6",
+    "stream": "^0.0.3",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
